syntax = "proto3";

package im.ghasedak.rpc;

option java_package = "im.ghasedak.rpc.auth";
option java_multiple_files = true;

import "api/auth.proto";
import "rpc/misc.proto";

service AuthService {
    rpc StartPhoneAuth (RequestStartPhoneAuth) returns (ResponseStartPhoneAuth);
    rpc ValidateCode (RequestValidateCode) returns (ResponseAuth);
    rpc SignUp (RequestSignUp) returns (ResponseAuth);
    rpc SignOut (RequestSignOut) returns (ResponseVoid);
}

message RequestStartPhoneAuth {
    int64 phone_number = 1;
    string api_key = 2;
}

message ResponseStartPhoneAuth {
    string transaction_hash = 1;
}

message RequestValidateCode {
    string transaction_hash = 1;
    string code = 2;
}

message RequestSignUp {
    string transaction_hash = 1;
    string name = 2;
}

message ResponseAuth {
    bool is_registered = 1;
    im.ghasedak.api.ApiAuth api_auth = 2;
}

message RequestSignOut {
}